New updates for GPU, Memory, Power Supply

--- a/cpu.html
+++ b/cpu.html
@@ -46,6 +46,11 @@
                     <p>It is also responsible for telling all the other components what to do.</p>
                     <p>The CPU is generally really small, and is considered to be the heart of the computer</p>
                     <p>The CPU will often times have a CPU coolder attached with a heatsink.</p>
+                    <p>Each CPU is comprised of a finite number of cores</p>
+                    <p>Each core will be a unit that can process many computing tasks</p>
+                    <p>Some CPU's have integrated graphics that will handle most of the capabilities of GPUs</p>
+                    <p>The speed is measure in GHz</p>
+                    
                 </div>
             </div>
         </main>
