--- a/gpu.html
+++ b/gpu.html
@@ -37,13 +37,18 @@
             
             <div id='maincontent'>
                 <figure>
-                    <img src="img/cpu.jpg" alt="Picture of Computer" width="250"/>
+                    <img src="img/gpu.jpg" alt="Picture of Video Card" width="250"/>
                 </figure>
             
                 <div>
                     <h2>The Graphics Processing Unit (CPU)</h2>
                     <p>The GPU will handle the generation of the picture you see on your screen</p>
-                    <p></p>
+                    <p>There are several cores within the GPU that will help with multiple processing</p>
+                    <p>Can be great for video games, rendering software, watching 4k videos, etc</p>
+                    <p>There are currently two main companies that design video cards: Nvidia and AMD</p>
+                    <p>Of those two brands, there are many companies that create these video cards (MSI, Gigabyte, Sapphire, etc...)</p>
+                    <p>These can get quite expensive depending on what you want to use it for.</p>
+                    <p>The speed is often measured in Flops</p>
                 </div>
             </div>
         </main>
