--- a/cpu.html
+++ b/cpu.html
@@ -37,7 +37,7 @@
             
             <div id='maincontent'>
                 <figure>
-                    <img src="img/cpu.jpg" alt="Picture of Computer" width="250"/>
+                    <img class="img-rounded" src="img/cpu.jpg" alt="Picture of Computer" width="250"/>
                 </figure>
             
                 <div>
