--- a/gpu.html
+++ b/gpu.html
@@ -37,7 +37,7 @@
             
             <div id='maincontent'>
                 <figure>
-                    <img src="img/gpu.jpg" alt="Picture of Video Card" width="250"/>
+                    <img class= "img-rounded" src="img/gpu.jpg" alt="Picture of Video Card" width="250"/>
                 </figure>
             
                 <div>
