--- a/powersupply.html
+++ b/powersupply.html
@@ -37,7 +37,7 @@
             
             <div id='maincontent'>
                 <figure>
-                    <img src="img/powersupply.jpg" alt="Picture of Power Supply" width="250"/>
+                    <img class="img-rounded" src="img/powersupply.jpg" alt="Picture of Power Supply" width="250"/>
                 </figure>
             
                 <div>
